# lihua_telegram_bot

./: .gitignore  .pre-commit-config.yaml  .project  Cargo.toml  README.md  build.gradle.kts  example.ini  gradle.properties  pyproject.toml  requirements.txt  settings.gradle.kts
.github/workflows/: format.yml  pylint.yml  rust-clippy.yml
app/: build.gradle.kts
app/src/main/java/org/example/: App.java  MyBot.java
lihua_telegram_bot/: __init__.py  __main__.py  config.jsonc  config.py  crypto.js  i18n.py  index.js  log.py  mkcrt.py  post.py  xxtea.js
lihua_telegram_bot/i18n/: __init__.py
src/: main.rs
src/main/java/me/t/: Base.java  Main.java  MyBot.java  realLiHua.java
src/main/resources/: logback.xml
utils/: portscan.py
